[frontend] Task list text overflow fix

--- a/Pineapple-UI/src/app/main/home/home.component.scss
+++ b/Pineapple-UI/src/app/main/home/home.component.scss
@@ -31,12 +31,22 @@ button:focus {
   outline:0;
 }
 
-//.list-group-item {
-//  overflow: hidden; // these two must be true for text-overflow to work
-//  white-space: nowrap;
-//  text-overflow: ellipsis;
-//}
+.list-group-item-text {
+    overflow: hidden; // these two must be true for text-overflow to work
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    float: left;
+    width: 80%;
+}
 
+.list-group-item {
+    position: relative;
+    display: block;
+    padding: 0.75rem 0.5rem 0.75rem 1.5rem;
+    margin-bottom: -1px;
+    background-color: #FFF;
+    border: 1px solid rgba(0, 0, 0, 0.125);
+}
 
 /* card-text takes care of text overflow*/
 .card-text {
